--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "start": "yarn dev"
   },
   "dependencies": {
-    "autoprefixer": "^7.1.6",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.3",
     "fecha": "^2.2.0",
@@ -36,6 +35,7 @@
     "yarn": "^1.19.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "babel-core": "^6.7.2",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
@@ -85,5 +85,16 @@
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/"
     ]
+  },
+  "overrides": {
+    "@babel/traverse": "^7.26.10",
+    "braces": "^3.0.3",
+    "micromatch": "^4.0.8",
+    "minimatch": "^3.1.2",
+    "semver": "^7.6.3",
+    "lodash": "^4.17.21",
+    "json5": "^2.2.3",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.49"
   }
 }
