--- a/package.json
+++ b/package.json
@@ -1,100 +1,28 @@
 {
-  "name": "React-iTunes-Movie-Search",
-  "version": "2.2.2",
-  "description": "iTunes Movie Search implemented in React",
-  "keywords": [
-    "react",
-    "iTunes",
-    "search",
-    "apple",
-    "babel",
-    "ES6"
-  ],
-  "license": "MIT",
+  "name": "react-itunes-movie-search",
+  "version": "3.0.0",
+  "description": "iTunes Movie Search implemented in React (Modern)",
+  "type": "module",
   "scripts": {
-    "coverage": "jest --coverage",
-    "jest:watch": "jest --watch",
-    "test": "yarn lint && yarn flow && yarn jest",
-    "jest:update": "jest --u test/unit",
-    "jest": "jest test/unit",
-    "flow": "flow",
-    "clean": "rimraf dist/",
-    "build": "webpack --config ./webpack/webpack.config.babel.js --progress --colors --define process.env.NODE_ENV='\"production\"'",
-    "dev": "webpack-dev-server --config ./webpack/webpack.config.dev.js",
-    "deploy": "yarn clean && yarn build",
-    "lint": "eslint src/** webpack/** test/**",
-    "start": "yarn dev"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "classnames": "^2.2.3",
-    "fecha": "^2.2.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "yarn": "^1.19.1"
+    "classnames": "^2.5.1",
+    "fecha": "^4.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "babel-core": "^6.7.2",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.28.1",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "enzyme-to-json": "^3.1.4",
-    "eslint": "^4.8.0",
-    "eslint-config-airbnb": "^16.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.4",
-    "flow-bin": "^0.59.0",
-    "identity-obj-proxy": "^3.0.0",
-    "imports-loader": "^0.7.0",
-    "jest": "^21.2.1",
-    "postcss-loader": "^2.0.3",
-    "prettier": "^1.3.1",
-    "raf": "^3.4.0",
-    "rimraf": "^2.5.0",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.4.2"
-  },
-  "jest": {
-    "setupFiles": [
-      "raf/polyfill",
-      "./test/unit/jest-setup.js"
-    ],
-    "collectCoverageFrom": [
-      "src/**.js",
-      "!src/index.js",
-      "!src/type.js"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "moduleNameMapper": {
-      "\\.(css)$": "identity-obj-proxy"
-    },
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/"
-    ]
-  },
-  "overrides": {
-    "@babel/traverse": "^7.26.10",
-    "braces": "^3.0.3",
-    "micromatch": "^4.0.8",
-    "minimatch": "^3.1.2",
-    "semver": "^7.6.3",
-    "lodash": "^4.17.21",
-    "json5": "^2.2.3",
-    "nth-check": "^2.1.1",
-    "postcss": "^8.4.49"
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "vite": "^6.0.7"
   }
 }
